# social-novel

./: .env  .gitattributes  .gitignore  Cargo.toml  README.md  bacon.toml  config.ini  justfile  package.json  social-novel.ron
.cargo/: config.toml
.sqlx/: query-06df5e566e2749d4044d26f50cc15a61f29d4126540e9325b2c9c3336a6803a4.json  query-13e0710a8196f19739f24a32f1e4c374c77ffc0dad074cdb28a1b6ce6752e395.json  query-177d55cabd94467b0fea228aef5c139d5ad7c8b5c3b4ac4e8aec83fe269905c9.json  query-25f142a082d896ed67c568caddc580a6d3232b0a291ff2c7631c04496cb94144.json  query-40185dd9e7c417290f1c0ccbc862420b4ee7c88ceef385a5bb1c9dca04b3a2d7.json  query-537ad195087156fb68cf8ce3dba95a0965697aaf3dfda7bd498ca16df8059215.json  query-723cab21f0c1465f24b4642691b9a340acb400fdd41ca27ac28f4fc6a8284a97.json  query-74f9474e87f9a14ca5b626a2f95dc97b0cd130fc2386e98a3f0eaa70201870ad.json  query-7a184ab274f8b67bcdfac033687cbbcd29d27342d7b273955beeb1b606da07c6.json  query-a85f21174e647ee52c6b2928dde498655d7d9270036b170d8ac5ac264094c74b.json  query-aac4014147e96e39a4761f830b4eb1496013578ecdd06b2975e8929295077530.json
.zed/: tasks.json
crates/api/: Cargo.toml
crates/api/src/: api_character.rs  api_group.rs  api_post.rs  api_room.rs  lib.rs
crates/config/: Cargo.toml
crates/db/: Cargo.toml
crates/db/src/: db_character.rs  db_group.rs  db_post.rs  db_room.rs  lib.rs
crates/db/src/postgres/: mod.rs  pg_character.rs  pg_group.rs  pg_media.rs  pg_post.rs  pg_room.rs
db/: docker-compose.yaml  social-novel.sqlite
db/docker/postgres/initdb/: social-novel-dump.sql
db/migrations/postgres/: 0001_init.sql
docker/postgres/: docker-compose.yaml
migrations/: 0001_init.sql
migrations/postgres/: 0001_init.sql  0002_add_relation.sql  0003_chat.sql  0004_rename_group_table.sql
migrations/sqlite/: 0001_init.sql
plugins/api/: Cargo.toml
plugins/api/src/: api_character.rs  api_chat.rs  api_group.rs  api_media.rs  api_post.rs  api_room.rs  lib.rs
plugins/config/: Cargo.toml
plugins/config/src/: lib.rs
plugins/db/: Cargo.toml
plugins/db/src/: db_ads.rs  db_character.rs  db_chat.rs  db_group.rs  db_media.rs  db_post.rs  lib.rs
plugins/db/src/postgres/: pg_chat.rs  pg_group.rs  pg_post.rs
res/: package.json  tailwind.config.js
res/css/: components.css  post.css  tailwind_input.css  tailwind_output.min.css
res/html/: character.gohtml  character.html  character_edit.html  characters.gohtml  characters.html  index.gohtml  index.html  index_bak.html  messenger.html  post_edit.html  profile.html
res/html/include/: break.html  comment.html  dashboard.gohtml  dashboard.html  head.html  header.gohtml  header.html
res/js/: utils.js
social-novel/: Cargo.toml
social-novel/.sqlx/: query-0481bef73feb1c6c540952e425b7d37bf6469285914e5c50bbe98664199aefe1.json  query-0ab00d5240567ba66a8886464f50983ca44d8286fd62431c604a0841b9ecb4e9.json  query-3abe8a7b794cf20c2d37b551c095e869af3b53f9277dad737bdcb9dd2c6c0f70.json  query-5cd11d4defe96ddfcf674bb22489c040578031bdf14967efb4d4b6e6e682c240.json  query-765f81936d1f6c8d508cf38ce3d5708ac498c69e835f41edc65ed060ce3ddf1f.json  query-e32a3145dae26932ca954c47505310de539335e259d2ab03080dca8f232387fb.json  query-e6742d5d6867ae930dbe4a83f7acd51a859454bb8dc89ec1d4aa491c5d32ea67.json  query-e8c059163c00453d4c6623a1b45395599c2818151b739a4b602b6bf97f2c32a5.json  query-ef79ec0b957bd2af105a586ed60930c40605acafb22a81ec0ee80e0dcec7a806.json  query-f8c2b526479ea1577310a7ac603a8dd954b2fe27849fd223997e9527f6c38e5b.json
social-novel/migrations/postgres/: 0001_init.sql
social-novel/src/: main.rs  ui.rs
social-novel/src/ui/: ui_character.rs  ui_messenger.rs  ui_post.rs
src/: api.rs  config.rs  db.rs  lib.rs  main.rs  route.rs  ui.rs
src/api/: api_character.rs  api_chat.rs  api_group.rs  api_media.rs  api_post.rs  character.rs  post.rs
src/db/: character.rs  db_character.rs  db_chat.rs  db_group.rs  db_media.rs  db_post.rs  media.rs  post.rs  sqlite.rs
src/db/postgre/: character.rs  media.rs  post.rs
src/db/postgres/: mod.rs  pg_character.rs  pg_chat.rs  pg_group.rs  pg_media.rs  post.rs
src/db/sqlite/: character.rs  mod.rs  post.rs  sqlite_character.rs  sqlite_media.rs  sqlite_post.rs
src/route/: character.rs  index.rs
src/ui/: character.rs  index.rs  ui_character.rs  ui_post.rs
