[package]
name = "social-novel"
version = "0.0.3"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2024"

[lib]
name = "sn_internal"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
actix-web = { version = "4.12" }
actix-files = "0.6"
actix-multipart = { version = "0.7" }
actix-cors = "0.7"
actix-web-lab = "0.26"
actix-web-httpauth = "0.8"
clap = { version = "4.6", features = ["derive"] }
ron = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
tokio-stream = {version = "0.1"}
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "time", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tera = "1.20"
blake3 = "1.8"
dotenvy = "0.15"
infer = "0.19"
parking_lot = "0.12"
futures-util = "0.3.31"

[target.'cfg(all(target_os = "linux", not(target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = "0.6"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
strip = true
lto = true