[workspace]
members = ["social-novel", "crates/config", "crates/db", "crates/api"]
resolver = "3"

[workspace.package]
version = "0.0.3"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2024"

[workspace.dependencies]
my_config = { path = "crates/config" }
my_db = { path = "crates/db" }
my_api = { path = "crates/api" }

web-misc = { version = "0.1", path = "../web-misc" }
anyhow = { version = "1.0" }
actix-web = { version = "4.13" }
actix-files = "0.6"
actix-multipart = { version = "0.7" }
actix-cors = "0.7"
actix-web-lab = "0.26"
actix-web-httpauth = "0.8"
clap = { version = "4.6" }
ron = "0.12"
serde = { version = "1.0" }
serde_json = "1.0"
tokio = { version = "1.52" }
tokio-stream = { version = "0.1" }
sqlx = { version = "0.9" }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
tera = "1.20"
blake3 = "1.8"
dotenvy = "0.15"
infer = "0.19"
parking_lot = "0.12"
futures-util = "0.3.31"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
strip = true
lto = true
