[package]
name = "social-novel"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
my_config = { workspace = true }
my_db = { workspace = true }
my_api = { workspace = true }

web-misc = { workspace = true }
anyhow = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true }
actix-cors = { workspace = true }
actix-web-lab = { workspace = true }
actix-web-httpauth = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tera = { workspace = true }
dotenvy = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(all(target_os = "linux", not(target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = "0.6"

[features]
default = ["postgres"]
postgres = ["my_db/postgres", "web-misc/postgres"]
